ChangeLog for PyLint
====================

2006-09-25  --  0.12.1
    * fixed python >= 2.4 format false positive with multiple lines statement
    * fixed some 2.5 issues
    * fixed generator expression scope bug (depends on astng 0.16.1)
    * stop requiring __revision__
	
2006-08-10  --  0.12.0
    * usability changes:
      - parseable, html and color options are now handled by a single 
	output-format option
      - enable-<checkerid> and disable-all options are now handled by 
	two (exclusive) enable-checker and disable-checker options 
	taking a comma separated list of checker names as value
      - renamed debug-mode option to errors-only
	
    * started a reference user manual

    * new W0212 message for access to protected member from client code
      (close #14081)
	
    * new W0105 and W0106 messages extracted from W0104 (statement seems
      to have no effect) respectivly when the statement is actually string
      (that's sometimes used instead of comments for documentation) or an
      empty  statement generated by a useless semicolumn
	
    * reclassified W0302 to C0302
	
    * fix so that global messages are not anymore connected to the last
      analyzed module (close #10106)
    * fix some bugs related to local disabling of messages
    * fix cr/lf pb when generating the rc file on windows platforms
	

2006-04-19  --  0.11.0
    * fix crash caused by the exceptions checker in some case
    * fix some E1101 false positive with abstract method or classes defining
      __getattr__
    
    * dirty fix to avoid "_socketobject" has not "connect" member. The actual
      problem is that astng isn't able to understand the code used to create 
      socket.socket object with exec
	
    * added an option in the similarity checker to ignore docstrings, enabled
      by default
	
    * included patch from Benjamin Niemann to allow block level
      enabling/disabling of messages

	
2006-03-06  --  0.10.0